Change June to July

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <a href="http://www.ankietka.pl/ankieta/89619/touch-badanie-jakosci-i-wzrostu-czytelnictwa-pomoz-nam-sie-rozwinac-ankieta-zajmie-ci-5-10-minut.html" class="poll-link">Pomóż mu wypełniając ankietę! Kliknij na babeczkę</a>
       </header>
 
-      <h1 class="issue-header">Czytaj czerwcowe wydanie online:</h1>
+      <h1 class="issue-header">Czytaj lipcowe wydanie online:</h1>
 
       <div class="flash-bg">
         <div class="flash-is-evil">
