--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,22 @@
         <a href="http://www.ankietka.pl/ankieta/89619/touch-badanie-jakosci-i-wzrostu-czytelnictwa-pomoz-nam-sie-rozwinac-ankieta-zajmie-ci-5-10-minut.html" class="poll-link">Pomóż mu wypełniając ankietę! Kliknij na babeczkę</a>
       </header>
 
-      <h1 class="issue-header">Czytaj lipcowe wydanie online:</h1>
+      <!-- <h1 class="issue-header">Czytaj lipcowe wydanie online:</h1>
 
       <div class="flash-bg">
         <div class="flash-is-evil">
           <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120701142752-12e973389aa949c9aaef373074e92920" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120701142752-12e973389aa949c9aaef373074e92920" /></object>
         </div>
+      </div> -->
+
+      <div class='placeholder'>
+        <h1>Drodzy Czytelnicy!</h1>
+        <p>Najnowszego numeru TOUCHÉ spodziewajcie się 3 sierpnia - za opóźnienie przepraszamy!</p>
+        <br>
+        <a href='/img/aug_placeholder.jpeg' target='_blank'>
+          <img src='/img/aug_placeholder.jpeg' width='640'>
+        </a>
+        <p>Zapowiedź sesji fashion do numeru Sierpień 2012 - czekajcie cierpliwie!</p>
       </div>
 
       <nav class="page-navigation">
