--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,7 @@
     <title>TOUCHÉ | Femme nie znaczy fatale</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta name="keywords" content="Touche,prasa kobieca,babeczka,muffinka,ciasteczko,ciastko,Rahim Blak,Justyna Cyganik,Smutek letnią porą,babeczka z pazurem,chaos, który chce się ogarnąć,how do you do you do?,krem na cieście,o rycerzu, formacie ce i krojeniu szczypiorku,have fun,Coke Live Music Festival,Street fashion,on i ona w kinie,smakowity design,guns n'roses rybnik,heineken open'er festival,Anna Chramęga, Małgorzata Iwanek, Martyna Kapuścińska, Cyprian Kawicz, Natalia Kosiarczyk, Iga Kowalska, Joanna Krukowska, Magdalena Kudłacz, Kamil Lipa, Monika Masłowska, Eliza Ortemska, Magdalena Paluch, Maciej Pawlak,  Agnieszka Różańska, Justyna Skrzekut, Patrycja Smagacz, Natalia Sokólska, Sandra Staletowicz, Katarzyna Trząska, Natalia Tarabuła, Aneta Władarz, Ewelina Chechelska, Aleksandra Kozub, Adrian Pacała, Koleta Michowska, Olga Adamska, Mateusz Gajda, Karamell Studio, Hanna Sokólska, Roksana Wąs, Kinga Tync, Barbara Maroń, Anna Pikuła, Bartosz Friese, Dobrosława Rurańska, Barbara Graczyk, Marta Lower, Anna Salamon">
   </head>
   <body>
     <div class="container">
