Show September issue

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
         <a href="http://www.ankietka.pl/ankieta/89619/touch-badanie-jakosci-i-wzrostu-czytelnictwa-pomoz-nam-sie-rozwinac-ankieta-zajmie-ci-5-10-minut.html" class="poll-link">Pomóż mu wypełniając ankietę! Kliknij na babeczkę</a>
       </header>
 
-      <h1 class="issue-header">Czytaj sierpniowe wydanie online:</h1>
+      <h1 class="issue-header">Czytaj wrześniowe wydanie online:</h1>
 
       <div class="flash-bg">
         <div class="flash-is-evil">
-          <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120803193116-6b450646592d48ccad7dde3d9ec6fb37" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120803193116-6b450646592d48ccad7dde3d9ec6fb37" /></object>
+          <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120901131348-65cf48ee78594cddb0bac82f77b9a5b2" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=120901131348-65cf48ee78594cddb0bac82f77b9a5b2" /></object>
         </div>
       </div>
 
