--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,11 +14,11 @@
         <a href="http://www.ankietka.pl/ankieta/89619/touch-badanie-jakosci-i-wzrostu-czytelnictwa-pomoz-nam-sie-rozwinac-ankieta-zajmie-ci-5-10-minut.html" class="poll-link">Pomóż mu wypełniając ankietę! Kliknij na babeczkę</a>
       </header>
 
-      <h1 class="issue-header">Czytaj październikowe wydanie online:</h1>
+      <h1 class="issue-header">Czytaj listopadowe wydanie online:</h1>
 
       <div class="flash-bg">
         <div class="flash-is-evil">
-          <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121001205810-3554c7217641442194b269e253cda2b9" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121001205810-3554c7217641442194b269e253cda2b9" /></object>
+          <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121102125944-88d2a61cfb994ed88307a54d1d01d4eb" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121102125944-88d2a61cfb994ed88307a54d1d01d4eb" /></object>
         </div>
       </div>
 
