Update about page

--- a/public/about.html
+++ b/public/about.html
@@ -26,6 +26,11 @@ redaktor naczelna<br>
 redaktor prowadząca/marketing<br>
 <a href="mailto:mlower@touche.com.pl">mlower@touche.com.pl</a></p>
 
+<p><b>BARTOSZ FRIESE</b><br>
+z-ca redaktor naczelnej<br>
+redaktor działu film/muzyka<br>
+<a href="bfriese@touche.com.pl">bfriese@touche.com.pl</a></p>
+
 <p><b>ANIA SALAMON</b><br>
 dyrektor artystyczna/layout/skład/łamanie<br>
 <a href="asalamon@touche.com.pl">asalamon@touche.com.pl</a></p>
@@ -33,28 +38,24 @@ dyrektor artystyczna/layout/skład/łamanie<br>
 <p><b>DOBRUSIA RURAŃSKA</b><br>
 grafika</p>
 
-<p><b>BARTOSZ FRIESE</b><br>
-redaktor działu film/muzyka<br>
-<a href="bfriese@touche.com.pl">bfriese@touche.com.pl</a></p>
-
 <p><b>DZIAŁ REKLAMY I PROMOCJI:</b><br>
-Basia Graczyk - <a href="mailto:promocja@touche.com.pl">promocja@touche.com.pl</a></p>
+Basia Graczyk - <a href="mailto:promocja@touche.com.pl">promocja@touche.com.pl</a><br>
+Patrycja Szczęsny - <a href="mailto:pszczesny@touche.com.pl">pszczesny@touche.com.pl</a> (partnerzy, patronaty medialne)</p>
 
-<p><b>DZIAŁ GRAFIKI:</b> Ewa Kania, Kinga Tync, Basia Maroń, Ania Pikuła</p>
+<p><b>DZIAŁ GRAFIKI:</b> Ania Krztoń, Basia Maroń, Ania Pikuła, Kinga Tync</p>
 
-<p><b>DZIAŁ FOTO:</b> Olga Adamska, Mateusz Gajda, Karamell Studio,<br>
-Hania Sokólska, Roksana Wąs</p>
+<p><b>DZIAŁ FOTO:</b> Olga Adamska, Mateusz Gajda, Hania Sokólska, Karamell Studio, Roksana Wąs</p>
 
-<p><b>OKŁADKA I SESJA MIESIĄCA:</b> Aurelia Frydrych (pełny opis na str 52)</p>
+<p><b>DZIAŁ REDAKTORÓW:</b> Anka Chramęga, Dominik Frosztęga, Małgorzata Iwanek, Jakub Jaworudzki, Martyna Kapuścińska, Natalia Kosiarczyk, Iga Kowalska, Asia Krukowska, Magdalena Kudłacz, Kamil Lipa, Monika Masłowska, Eliza Ortemska, Magdalena Paluch, Maciek Pawlak, Agnieszka Różańska, Justyna Skrzekut, Patrycja Smagacz, Natalia Sokólska, Sandra Staletowicz, Kasia Trząska, Aneta Władarz</p>
 
-<p><b>DZIAŁ REDAKTORÓW:</b> Anka Chramęga, Małgorzata Iwanek, Martyna Kapuścińska, Cyprian Kawicz, Natalia Kosiarczyk, Iga Kowalska, Asia Krukowska, Magdalena Kudłacz, Kamil Lipa, Monika Masłowska, Eliza Ortemska, Magdalena Paluch, Robert Pander, Maciek Pawlak,  Agnieszka Różańska, Emil Samson, Justyna Skrzekut, Patrycja Smagacz, Natalia Sokólska, Sandra Staletowicz, Kasia Trząska, Natalia Tarabuła, Aneta Władarz</p>
+<p><b>STYLISTA:</b> Ania Sowik</br>
 
-<p><b>STYLIŚCI:</b> Kasia Gorol, Ania Sowik</br>
 <b>WIZAŻ:</b> Patrycja Kocot</p>
 
-<p><b>KOREKTA:</b> Ewelina Chechelska, Monika Masłowska, Natalia Tarabuła</p>
+<p><b>KOREKTA:</b> Ewelina Chechelska, Aleksandra Kozub, Monika Masłowska</p>
 
-<p><b>STRONA INTERNETOWA:</b> Adrian Pacała: <a href="mailto:adrian@touche.com.pl">adrian@touche.com.pl</a></p>
+<p><b>STRONA INTERNETOWA:</b> <span style="display:inline-block; transform:rotate(180deg); -webkit-transform:rotate(180deg);
+-moz-transform:rotate(180deg); -o-transform:rotate(180deg); ">Adrian Pacała:</span> <a href="mailto:adrian@touche.com.pl">adrian@touche.com.pl</a> Maciek Wojcieszak</p>
 <p>Dagmara Lower – logotyp</p>
 
 <p>Opublikowane teksty, zdjęcia i ilustracje objęte są ochroną praw autorskich i nie mogą zostać naruszone przez osoby trzecie.</p>
