--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,18 @@
 
       <h1 class="issue-header">Czytaj listopadowe wydanie online:</h1>
 
-      <div class="flash-bg">
-        <div class="flash-is-evil">
-          <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121103223724-9eeb61c29a614065b9d8fc78e8cb8f5c" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121103223724-9eeb61c29a614065b9d8fc78e8cb8f5c" /></object>
+      <div>
+        <div class="flash-bg">
+          <div class="flash-is-evil">
+            <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121103223724-9eeb61c29a614065b9d8fc78e8cb8f5c" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=121103223724-9eeb61c29a614065b9d8fc78e8cb8f5c" /></object>
+          </div>
         </div>
+
+        <div class='poster-bg'>
+          <img src='/img/poster.jpg' alt='Plakat' width='' height=''>
+        </div>
+
+        <div class='clear'></div>
       </div>
 
       <!-- <div class='placeholder'>
