--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
         <a href="http://www.ankietka.pl/ankieta/89619/touch-badanie-jakosci-i-wzrostu-czytelnictwa-pomoz-nam-sie-rozwinac-ankieta-zajmie-ci-5-10-minut.html" class="poll-link">Pomóż mu wypełniając ankietę! Kliknij na babeczkę</a>
       </header>
 
-      <h1 class="issue-header">Czytaj styczniowe wydanie online:</h1>
+      <h1 class="issue-header">Czytaj lutowe wydanie online:</h1>
 
       <div>
         <div class="flash-bg">
           <div class="flash-is-evil">
-            <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=130103200648-7e8623971d6340b39e227e977df32d3a" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=130103200648-7e8623971d6340b39e227e977df32d3a" /></object>
+            <object style="width:600px;height:400px" ><param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf?mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=130202225223-91b483e7ac4c428d810f7afedabbe088" /><param name="allowfullscreen" value="true"/><param name="menu" value="false"/><param name="wmode" value="transparent"/><embed src="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" type="application/x-shockwave-flash" allowfullscreen="true" menu="false" wmode="transparent" style="width:600px;height:400px" flashvars="mode=mini&amp;embedBackground=%23ffffff&amp;backgroundColor=%23222222&amp;documentId=130202225223-91b483e7ac4c428d810f7afedabbe088" /></object>
           </div>
         </div>
       </div>
