--- a/public/index.html
+++ b/public/index.html
@@ -66,3 +66,23 @@
         <a href="https://www.facebook.com/festiwalyaf" target="_blank">
           <img src="img/yaf.jpg" width="120" style="vertical-align:middle">
         </a>
+
+        <a href="http://przedsiebiorcza-kobieta.pl/category/katowice/" target="_blank">
+          <img src="img/pk.png" width="120" style="vertical-align:middle">
+        </a>
+      </div>
+
+      <footer class="page-footer">
+        <p>
+          <a href="terms.html">Regulamin</a> |
+          <a href="privacy.html">Polityka Prywatności</a> |
+          <a href="contact.html">Kontakt</a>
+        </p>
+
+        <p>
+          Grafika: <a href="#">Dobrusia Rurańska</a>, kod i jednorożce: <em>Adrian Pacała</em>.
+        </p>
+      </footer>
+    </div>
+  </body>
+</html>
